test/Fixtures/InvalidSuites/ConstructorParams.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites;

class ConstructorParams
{
    public function __construct(string $required)
    {
    }
}
